Новые фаилы для проекта

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav>
         <ul class="items">
           <li><a href="./lesson1/index.html" class="link">Урок №1</a></li>
-          <li><a href="./lesson2/index.html" class="link">Урок №2</a></li>
+          <!-- <li><a href="./lesson2/index.html" class="link">Урок №2</a></li> -->
         </ul>
       </nav>
     </main>
