--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <ul class="items">
           <li><a href="./lesson1/index.html" class="link">Урок №1</a></li>
           <li><a href="./lesson2/index.html" class="link">Урок №2</a></li>
+          <li><a href="./lesson3/index.html" class="link">Урок №3</a></li>
         </ul>
       </nav>
     </main>
