--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><a href="./lesson1/index.html" class="link">Урок №1</a></li>
           <li><a href="./lesson2/index.html" class="link">Урок №2</a></li>
           <li><a href="./lesson3/index.html" class="link">Урок №3</a></li>
+          <li><a href="./lesson4/index.html" class="link">Урок №4</a></li>
         </ul>
       </nav>
     </main>
