обновленные файлы урок№5

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <li><a href="./lesson2/index.html" class="link">Урок №2</a></li>
           <li><a href="./lesson3/index.html" class="link">Урок №3</a></li>
           <li><a href="./lesson4/index.html" class="link">Урок №4</a></li>
+          <li><a href="./lesson5/index.html" class="link">Урок №5</a></li>
         </ul>
       </nav>
     </main>
