Новые фаилы урок 6

--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
           <li><a href="./lesson3/index.html" class="link">Урок №3</a></li>
           <li><a href="./lesson4/index.html" class="link">Урок №4</a></li>
           <li><a href="./lesson5/index.html" class="link">Урок №5</a></li>
+          <li><a href="./lesson6/index.html" class="link">Урок №6</a></li>
         </ul>
       </nav>
     </main>
     <footer>
-      <p>copy @ 2020</p>
+      <p>efremov nikolai @ 2020</p>
     </footer>
   </body>
 </html>
