--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <li><a href="./lesson4/index.html" class="link">Урок №4</a></li>
           <li><a href="./lesson5/index.html" class="link">Урок №5</a></li>
           <li><a href="./lesson6/index.html" class="link">Урок №6</a></li>
+          <li><a href="./lesson7/index.html" class="link">Урок №7</a></li>
         </ul>
       </nav>
     </main>
